--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -295,82 +295,127 @@
 </div>
 <hr>
 <div id="lectures">
-  <h2 class="display-4">Lectures</h2>
+  <h2 class="display-4">Lectures<a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=MAT1224" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/details/books/calculus-volume-2" role="button">Textbook</a></h2>
 
 <h3>Lecture 0 (Jan 18)<br/>
-<em>The Fundamental Theorem of Calculus</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/1-3-the-fundamental-theorem-of-calculus" role="button">Section 1.3</a></h3>
+<em>The Fundamental Theorem of Calculus</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=The_Fundamental_Theorem_of_Calculus" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/1-3-the-fundamental-theorem-of-calculus" role="button">Sec. 1.3</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 1 (Jan 23)<br/>
-<em>Integration by Substitution</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/1-5-substitution" role="button">Section 1.5</a></h3>
+<em>Integration by Substitution</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Integration_by_Substitution" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/1-5-substitution" role="button">Sec. 1.5</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 2 (Jan 25)<br/>
-<em>Area between Curves</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-1-areas-between-curves" role="button">Section 2.1</a></h3>
+<em>Area between Curves</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Area_between_Curves" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-1-areas-between-curves" role="button">Sec. 2.1</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 3 (Jan 30)<br/>
-<em>Determining Volumes by Slicing</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-2-determining-volumes-by-slicing" role="button">Section 2.2</a></h3>
+<em>Determining Volumes by Slicing</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Determining_Volumes_by_Slicing" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-2-determining-volumes-by-slicing" role="button">Sec. 2.2</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 4 (Feb 1)<br/>
-<em>Volumes of Revolution: Cylindrival Shells</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-3-volumes-of-revolution-cylindrical-shells" role="button">Section 2.3</a></h3>
+<em>Volumes of Revolution: Cylindrival Shells</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Volumes_of_Revolution,_Cylindrical_Shells" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-3-volumes-of-revolution-cylindrical-shells" role="button">Sec. 2.3</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 5 (Feb 6)<br/>
-<em>Arc Length of a Curve and Surface Area</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-4-arc-length-of-a-curve-and-surface-area" role="button">Section 2.4</a></h3>
+<em>Arc Length of a Curve and Surface Area</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Arc_Length_and_Surface_Area" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-4-arc-length-of-a-curve-and-surface-area" role="button">Sec. 2.4</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 6 (Feb 8)<br/>
-<em>Physical Applications</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-5-physical-applications" role="button">Section 2.5</a></h3>
+<em>Physical Applications</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Physical_Applications" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-5-physical-applications" role="button">Sec. 2.5</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 7 (Feb 13)<br/>
-<em>Moments and Center of Mass</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-6-moments-and-centers-of-mass" role="button">Section 2.6</a></h3>
+<em>Moments and Center of Mass</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Moments_and_Center_of_Mass" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-6-moments-and-centers-of-mass" role="button">Sec. 2.6</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 8 (Feb 15)<br/>
-<em>Integration by Parts</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-1-integration-by-parts" role="button">Section 3.1</a></h3>
+<em>Integration by Parts</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Integration_by_Parts" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-1-integration-by-parts" role="button">Sec. 3.1</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 9 (Feb 20)<br/>
-<em>Trigonometric Integrals</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-2-trigonometric-integrals" role="button">Section 3.2</a></h3>
+<em>Trigonometric Integrals</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Trigonometric_Integrals" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-2-trigonometric-integrals" role="button">Sec. 3.2</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 10 (Feb 22)<br/>
-<em>Trigonometric Substitution</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-3-trigonometric-substitution" role="button">Section 3.3</a></h3>
+<em>Trigonometric Substitution</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Trigonometric_Substitution" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-3-trigonometric-substitution" role="button">Sec. 3.3</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 11 (Feb 27)<br/>
-<em>Partial Fractions</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-4-partial-fractions" role="button">Section 3.4</a></h3>
+<em>Partial Fractions</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Partial_Fractions" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-4-partial-fractions" role="button">Sec. 3.4</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 12 (Mar 1)<br/>
-<em>Improper Integrals</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-7-improper-integrals" role="button">Section 3.7</a></h3>
+<em>Improper Integrals</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Improper_Integrals" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-7-improper-integrals" role="button">Sec. 3.7</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 13 (Mar 6)<br/>
-<em>Separation of Variables</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/4-3-separable-equations" role="button">Section 4.3</a></h3>
+<em>Separation of Variables</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Separation_of_Variables" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/4-3-separable-equations" role="button">Sec. 4.3</a></h3>
 <p>
 
 </p>
+<p>
+<b>Learning Objectives:</b>
+</p>
 <h3>Lecture 14 (Mar 8)<br/>
-<em>First-Order Linear Differential Equations</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/4-5-first-order-linear-equations" role="button">Section 4.5</a></h3>
+<em>First-Order Linear Differential Equations</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=First-Order_Linear_Equations" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/4-5-first-order-linear-equations" role="button">Sec. 4.5</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <hr>
 <h3 style="font-variant: small-caps;text-align:center;">Spring Break</h3>
@@ -380,55 +425,88 @@
 <p>
 
 </p>
+<p>
+<b>Learning Objectives:</b>
+</p>
 <h3>Lecture 16 (Mar 22)<br/>
-<em>Sequences</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-1-sequences" role="button">Section 5.1</a></h3>
+<em>Sequences</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Sequences" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-1-sequences" role="button">Sec. 5.1</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 17 (Mar 27)<br/>
-<em>Infinite Series</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-2-infinite-series" role="button">Section 5.2</a></h3>
+<em>Infinite Series</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Infinite_Series" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-2-infinite-series" role="button">Sec. 5.2</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 18 (Mar 29)<br/>
-<em>The Divergence and Integral Tests</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-3-the-divergence-and-integral-tests" role="button">Section 5.3</a></h3>
+<em>The Divergence and Integral Tests</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=The_Divergence_and_Integral_Tests" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-3-the-divergence-and-integral-tests" role="button">Sec. 5.3</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 19 (Apr 3)<br/>
-<em>Comparison Test</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-4-comparison-tests" role="button">Section 5.4</a></h3>
+<em>Comparison Test</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Comparison_Tests" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-4-comparison-tests" role="button">Sec. 5.4</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 20 (Apr 5)<br/>
-<em>Alternating Sequences</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-5-alternating-series" role="button">Section 5.5</a></h3>
+<em>Alternating Sequences</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Alternating_Series" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-5-alternating-series" role="button">Sec. 5.5</a></h3>
 <p>
 
 </p>
+<p>
+<b>Learning Objectives:</b>
+</p>
 <h3>Lecture 21 (Apr 10)<br/>
-<em>Ratio and Root Tests</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-6-ratio-and-root-tests" role="button">Section 5.6</a></h3>
+<em>Ratio and Root Tests</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Ratio_and_Root_Tests" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-6-ratio-and-root-tests" role="button">Sec. 5.6</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 22 (Apr 12)<br/>
 <em style="font-variant: small-caps;">Review of Series</em></h3>
 <p>
 
 </p>
+<p>
+<b>Learning Objectives:</b>
+</p>
 <h3>Lecture 23 (Apr 17)<br/>
-<em>Power Series and Functions</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/6-1-power-series-and-functions" role="button">Section 6.1</a></h3>
+<em>Power Series and Functions</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Power_Series_and_Functions" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/6-1-power-series-and-functions" role="button">Sec. 6.1</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 24 (Apr 19)<br/>
-<em>Properties of Power Series</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/6-2-properties-of-power-series" role="button">Section 6.2</a></h3>
+<em>Properties of Power Series</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Properties_of_Power_Series" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/6-2-properties-of-power-series" role="button">Sec. 6.2</a></h3>
 <p>
 
 </p>
+<p>
+<b>Learning Objectives:</b>
+</p>
 <h3>Lecture 25 (Apr 24)<br/>
-<em>Taylor and Maclaurin Series</em><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/6-3-taylor-and-maclaurin-series" role="button">Section 6.3</a></h3>
+<em>Taylor and Maclaurin Series</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Taylor_and_Maclaurin_Series" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/6-3-taylor-and-maclaurin-series" role="button">Sec. 6.3</a></h3>
 <p>
 
+</p>
+<p>
+<b>Learning Objectives:</b>
 </p>
 <h3>Lecture 26 (Apr 26)<br/>
 <em style="font-variant: small-caps;">Review of Power Series</em></h3>
@@ -442,10 +520,13 @@
 </p>
 <hr>
 <h3 style="font-variant: small-caps;">Student Study Day (May 3)</h3>
+<p>
+  At the end of each Fall and Spring Semester, the day prior to the beginning of the final examination period is designated as a Student Study Day. Classes do not meet during a Student Study Day. Furthermore, a Student Study Day is not to be used as a date on which papers are to be turned in, examinations are to be given, quizzes are to be scheduled, mandatory review sessions are to be held, or for any other class-related activities, other than office hours. Voluntary review sessions at which no new material is presented may be conducted by faculty on this day. There is no Student Study Day during the Summer Semester.
+</p>
 <hr>
 <h3 style="font-variant: small-caps;">Final Exam (May 10)</h3>
 <p>
-The final exam will take place...
+The final exam will take place on Wednesday, May 10, from 9.00 to 10.50 am. More details on the location will be given later.
 </p>
 
 </div>
@@ -629,7 +710,7 @@ In accordance with the <a href="https://asap.utsa.edu/terms.htm">2022 Spring Fin
     for (i = 0; i < x.length; i++) {
      x[i].style="width:100%;";
     }
-    x = document.getElementsByClassName("btn btn-phd");
+    x = document.getElementsByClassName("btn btn-wiki");
     for (i = 0; i < x.length; i++) {
      x[i].style="width:100%;";
     }
