--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -304,6 +304,9 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Use the Fundamental Theorem of Calculus to evaluate derivatives of integrals.
+b) Use the Fundamental Theorem of Calculus to evaluate definite integrals.
+c) Explain the relationship between differentiation and integration.
 </p>
 <h3>Lecture 1 (Jan 23)<br/>
 <em>Integration by Substitution</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Integration_by_Substitution" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/1-5-substitution" role="button">Sec. 1.5</a></h3>
@@ -312,6 +315,9 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Recognize when to use integration by substitution.
+b) Use substitution to evaluate indefinite integrals.
+c) Use substitution to evaluate definite integrals.
 </p>
 <h3>Lecture 2 (Jan 25)<br/>
 <em>Area between Curves</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Area_between_Curves" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-1-areas-between-curves" role="button">Sec. 2.1</a></h3>
@@ -320,6 +326,9 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Determine the area of a region between two curves by integrating with respect to the independent variable.
+b) Find the area of a compound region.
+c) Determine the area of a region between two curves by integrating with respect to the dependent variable.
 </p>
 <h3>Lecture 3 (Jan 30)<br/>
 <em>Determining Volumes by Slicing</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Determining_Volumes_by_Slicing" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-2-determining-volumes-by-slicing" role="button">Sec. 2.2</a></h3>
@@ -328,6 +337,9 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Determine the volume of a solid by integrating a cross-section (the slicing method).
+b) Find the volume of a solid of revolution using the disk method.
+c) Find the volume of a solid of revolution with a cavity using the washer method.
 </p>
 <h3>Lecture 4 (Feb 1)<br/>
 <em>Volumes of Revolution: Cylindrival Shells</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Volumes_of_Revolution,_Cylindrical_Shells" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-3-volumes-of-revolution-cylindrical-shells" role="button">Sec. 2.3</a></h3>
@@ -336,6 +348,8 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Calculate the volume of a solid of revolution by using the method of cylindrical shells.
+b) Compare the different methods for calculating a volume of revolution.
 </p>
 <h3>Lecture 5 (Feb 6)<br/>
 <em>Arc Length of a Curve and Surface Area</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Arc_Length_and_Surface_Area" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-4-arc-length-of-a-curve-and-surface-area" role="button">Sec. 2.4</a></h3>
@@ -344,6 +358,8 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Determine the length of a plane curve between two points.
+b) Find the surface area of a solid of revolution.
 </p>
 <h3>Lecture 6 (Feb 8)<br/>
 <em>Physical Applications</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Physical_Applications" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-5-physical-applications" role="button">Sec. 2.5</a></h3>
@@ -352,6 +368,13 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Determine the mass of a one-dimensional object from its linear density function.
+b) Determine the mass of a two-dimensional circular object from its radial density function.
+c) Calculate the work done by a variable force acting along a line.
+d) Calculate the work done in stretching/compressing a spring.
+e) Calculate the work done in lifting a rope/cable.
+f) Calculate the work done in pumping a liquid from one height to another.
+g) Find the hydrostatic force against a submerged vertical plate.
 </p>
 <h3>Lecture 7 (Feb 13)<br/>
 <em>Moments and Center of Mass</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Moments_and_Center_of_Mass" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/2-6-moments-and-centers-of-mass" role="button">Sec. 2.6</a></h3>
@@ -360,6 +383,10 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Find the center of mass of objects distributed along a line.
+b) Find the center of mass of objects distributed in a plane.
+c) Locate the center of mass of a thin plate.
+d) Use symmetry to help locate the centroid of a thin plate.
 </p>
 <h3>Lecture 8 (Feb 15)<br/>
 <em>Integration by Parts</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Integration_by_Parts" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-1-integration-by-parts" role="button">Sec. 3.1</a></h3>
@@ -368,6 +395,11 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Recognize when to use integration by parts.
+b) Use the integration-by-parts formula to evaluate indefinite integrals.
+c) Use the integration-by-parts formula to evaluate definite integrals.
+d) Use the tabular method to perform integration by parts.
+e) Solve problems involving applications of integration using integration by parts.
 </p>
 <h3>Lecture 9 (Feb 20)<br/>
 <em>Trigonometric Integrals</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Trigonometric_Integrals" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-2-trigonometric-integrals" role="button">Sec. 3.2</a></h3>
@@ -376,6 +408,10 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Evaluate integrals involving products and powers of $\sin(x)$ and $\cos(x)$.
+b) Evaluate integrals involving products and powers of $\sec(x)$ and $\tan(x)$.
+c) Evaluate integrals involving products of $\sin(mx)$ and $\cos(nx)$ for $m,n$ integers.
+d) Solve problems involving applications of integration using trigonometric integrals.
 </p>
 <h3>Lecture 10 (Feb 22)<br/>
 <em>Trigonometric Substitution</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Trigonometric_Substitution" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-3-trigonometric-substitution" role="button">Sec. 3.3</a></h3>
@@ -384,6 +420,8 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Evaluate integrals involving the square root of a sum or difference of two squares.
+b) Solve problems involving applications of integration using trigonometric substitution.
 </p>
 <h3>Lecture 11 (Feb 27)<br/>
 <em>Partial Fractions</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Partial_Fractions" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-4-partial-fractions" role="button">Sec. 3.4</a></h3>
@@ -392,6 +430,12 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Integrate a rational function whose denominator is a product of linear and quadratic polynomials.
+b) Recognize distinct linear factors in a rational function.
+c) Recognize repeated linear factors in a rational function.
+d) Recognize distinct irreducible quadratic factors in a rational function.
+e) Recognize repeated irreducible quadratic factors in a rational function.
+f) Solve problems involving applications of integration using partial fractions.
 </p>
 <h3>Lecture 12 (Mar 1)<br/>
 <em>Improper Integrals</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Improper_Integrals" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/3-7-improper-integrals" role="button">Sec. 3.7</a></h3>
@@ -400,6 +444,10 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Recognize improper integrals and determine their convergence or divergence.
+b) Evaluate an integral over an infinite interval.
+c) Evaluate an integral over a closed interval with an infinite discontinuity within the interval.
+d) Use the comparison theorem to determine whether an improper integral is convergent or divergent.
 </p>
 <h3>Lecture 13 (Mar 6)<br/>
 <em>Separation of Variables</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Separation_of_Variables" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/4-3-separable-equations" role="button">Sec. 4.3</a></h3>
@@ -408,6 +456,9 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Recognize separable differential equations.
+b) Use separation of variables to solve a differential equation.
+c) Develop and analyze elementary mathematical models.
 </p>
 <h3>Lecture 14 (Mar 8)<br/>
 <em>First-Order Linear Differential Equations</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=First-Order_Linear_Equations" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/4-5-first-order-linear-equations" role="button">Sec. 4.5</a></h3>
@@ -416,6 +467,8 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Find an integrating factor and use it to solve a first-order linear differential equation.
+b) Solve applied problems involving first-order linear differential equations.
 </p>
 <hr>
 <h3 style="font-variant: small-caps;text-align:center;">Spring Break</h3>
@@ -435,6 +488,12 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Find a formula for the general term of a sequence.
+b) Find a recursive definition of a sequence.
+c) Determine the convergence or divergence of a given sequence.
+d) Find the limit of a convergent sequence.
+e) Determine whether a sequence is bounded and/or monotone.
+f) Apply the Monotone Convergence Theorem.
 </p>
 <h3>Lecture 17 (Mar 27)<br/>
 <em>Infinite Series</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Infinite_Series" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-2-infinite-series" role="button">Sec. 5.2</a></h3>
@@ -443,6 +502,14 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Write an infinite series using sigma notation.
+b) Find the nth partial sum of an infinite series.
+c) Define the convergence or divergence of an infinite series.
+d) Identify a geometric series.
+e) Apply the Geometric Series Test.
+f) Find the sum of a convergent geometric series.
+g) Identify a telescoping series.
+h) Find the sum of a telescoping series.
 </p>
 <h3>Lecture 18 (Mar 29)<br/>
 <em>The Divergence and Integral Tests</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=The_Divergence_and_Integral_Tests" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-3-the-divergence-and-integral-tests" role="button">Sec. 5.3</a></h3>
@@ -451,6 +518,10 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Use the Divergence Test to determine whether a series diverges.
+b) Use the Integral Test to determine whether a series converges or diverges.
+c) Use the p-Series Test to determine whether a series converges or diverges.
+d) Estimate the sum of a series by finding bounds on its remainder term.
 </p>
 <h3>Lecture 19 (Apr 3)<br/>
 <em>Comparison Test</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Comparison_Tests" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-4-comparison-tests" role="button">Sec. 5.4</a></h3>
@@ -459,6 +530,8 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Use the Direct Comparison Test to determine whether a series converges or diverges.
+b) Use the Limit Comparison Test to determine whether a series converges or diverges.
 </p>
 <h3>Lecture 20 (Apr 5)<br/>
 <em>Alternating Sequences</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Alternating_Series" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-5-alternating-series" role="button">Sec. 5.5</a></h3>
@@ -467,6 +540,9 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Use the Alternating Series Test to determine the convergence of an alternating series.
+b) Estimate the sum of an alternating series.
+c) Explain the meaning of absolute convergence and conditional convergence.
 </p>
 <h3>Lecture 21 (Apr 10)<br/>
 <em>Ratio and Root Tests</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Ratio_and_Root_Tests" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/5-6-ratio-and-root-tests" role="button">Sec. 5.6</a></h3>
@@ -475,6 +551,9 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Use the Ratio Test to determine absolute convergence or divergence of a series.
+b) Use the Root Test to determine absolute convergence or divergence of a series.
+c) Describe a strategy for testing the convergence or divergence of a series.
 </p>
 <h3>Lecture 22 (Apr 12)<br/>
 <em style="font-variant: small-caps;">Review of Series</em></h3>
@@ -483,6 +562,9 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Identify a power series.
+b) Determine the interval of convergence and radius of convergence of a power series.
+c) Use a power series to represent certain functions.
 </p>
 <h3>Lecture 23 (Apr 17)<br/>
 <em>Power Series and Functions</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Power_Series_and_Functions" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/6-1-power-series-and-functions" role="button">Sec. 6.1</a></h3>
@@ -491,6 +573,10 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Combine power series by addition or subtraction.
+b) Multiply two power series together.
+c) Differentiate and integrate power series term-by-term.
+d) Use differentiation and integration of power series to represent certain functions as power series.
 </p>
 <h3>Lecture 24 (Apr 19)<br/>
 <em>Properties of Power Series</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Properties_of_Power_Series" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/6-2-properties-of-power-series" role="button">Sec. 6.2</a></h3>
@@ -499,6 +585,10 @@
 </p>
 <p>
 <b>Learning Objectives:</b>
+a) Find a Taylor or Maclaurin series representation of a function.
+b) Find the radius of convergence of a Taylor Series or Maclaurin series.
+c) Finding a Taylor polynomial of a given order for a function.
+d) Use Taylor's Theorem to estimate the remainder for a Taylor series approximation of a given function.
 </p>
 <h3>Lecture 25 (Apr 24)<br/>
 <em>Taylor and Maclaurin Series</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=Taylor_and_Maclaurin_Series" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/6-3-taylor-and-maclaurin-series" role="button">Sec. 6.3</a></h3>
