--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -296,11 +296,14 @@
 <hr>
 <div id="lectures">
   <h2 class="display-4">Lectures<a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=MAT1224" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/details/books/calculus-volume-2" role="button">Textbook</a></h2>
-
+<p>Each lecture will have a short pitch (3-5 minutes), called <em>MathInContext</em>, where I will introduce different aspect of the context of mathematics: the people who have done and do math, the history of math or the applications of math to everyday life.</p>
 <h3>Lecture 0 (Jan 18)<br/>
 <em>The Fundamental Theorem of Calculus</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=The_Fundamental_Theorem_of_Calculus" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/1-3-the-fundamental-theorem-of-calculus" role="button">Sec. 1.3</a></h3>
 <p>
 
+</p>
+<p>
+<em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Gottfried_Wilhelm_Leibniz">Gottfried Wilhelm Leibniz</a>, the other father of calculus.
 </p>
 <p>
 <b>Learning Objectives:</b>
