--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -13,7 +13,7 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
     <meta property="og:url" content="https://tonellicueto.xyz/course.html" />
-    <meta property="og:title" content="Josu&eacute; Tonelli-Cueto: Caourse" /><!--35char-->
+    <meta property="og:title" content="Calc II at UTSA by J. Tonelli-Cueto" /><!--35char-->
     <meta property="og:description" content="Calculus II (MAT 1224) course at UTSA by Josu&eacute; Tonelli-Cueto in Spring 2022"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
