--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -90,6 +90,7 @@
            <li class="nav-item"><a class="nav-link" href="#grading">Grading</a></li>
            <li class="nav-item"><a class="nav-link" href="#homework">Homework</a></li>
            <li class="nav-item"><a class="nav-link" href="#exams">Exams</a></li>
+           <li class="nav-item"><a class="nav-link" href="#tutoring">Tutoring Services</a></li>
         </ul>
     </nav>
 </div>
@@ -110,12 +111,18 @@
 
 <div class="container">
 <hr>
-  <div class="row" style="text-align:center;"><div class="col-md-4">
-    <a class="btn btn-secondary" href="pdf/UTSA_MAT1224_spring2022_syllabus.pdf" role="button" style="width:90%;">Syllabus</a>
-  </div><div class="col-md-4">
-    <a class="btn btn-secondary" href="http://webwork.math.utsa.edu/webwork2/MAT_1224_009_Spring_2023/" role="button" style="width:90%;">WebWork</a>
-  </div><div class="col-md-4">
-    <a class="btn btn-secondary" href="https://openstax.org/details/books/calculus-volume-2" role="button" style="width:90%;">Course Textbook</a>
+  <div class="row" style="text-align:center;"><div class="col-md-6">
+    <a class="btn btn-secondary" href="pdf/UTSA_MAT1224_spring2022_syllabus.pdf" role="button" style="width:70%;">Syllabus</a>
+  </div><div class="col-md-6">
+    <a class="btn btn-booktop" href="https://openstax.org/details/books/calculus-volume-2" role="button" style="width:70%;">Course Textbook</a>
+    utsa.blackboard.com
+  </div></div>
+<hr>
+  <div class="row" style="text-align:center;"><div class="col-md-6">
+    <a class="btn btn-secondary" href="https://webwork.math.utsa.edu/webwork2/MAT_1224_009_Spring_2023/" role="button" style="width:70%;">WebWork</a>
+  </div><div class="col-md-6">
+    <a class="btn btn-secondary" href="https://utsa.blackboard.com/" role="button" style="width:70%;">Blackboard</a>
+
   </div></div>
 <hr>
 <div id="basic">
@@ -300,10 +307,12 @@
 <h3>Lecture 0 (Jan 18)<br/>
 <em>The Fundamental Theorem of Calculus</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=The_Fundamental_Theorem_of_Calculus" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/1-3-the-fundamental-theorem-of-calculus" role="button">Sec. 1.3</a></h3>
 <p>
-
+The Fundamental Theorem of Calculus relates the two fundamental notions integrals and derivatives...
 </p>
 <p>
-<em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Gottfried_Wilhelm_Leibniz">Gottfried Wilhelm Leibniz</a>, the other father of calculus.
+</p>
+<p>
+<em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Gottfried_Wilhelm_Leibniz">Gottfried Wilhelm Leibniz</a>, the other father of calculus. Additional materials to learn more: <a href="https://www.youtube.com/watch?v=9UKGPOwR-iw&t=97s"><em>Newton and Leibniz: Crash Course History of Science #17</em> by CrashCourse</a>. <a href="https://www.youtube.com/watch?v=68bQ3qSl6jc"><em>Gottfried Wilhem Leibniz</em> by Strayer</a>. <a href="https://www.youtube.com/watch?v=8BwbEMlQOUQ"><em>Philosophy of rationalism—Descartes and Leibniz</em> by Philosophy Animal</a>.
 </p>
 <p>
 <b>Learning Objectives:</b>
@@ -729,7 +738,7 @@ Before each of the midterm exams and the final exam, a set of practice problems 
 All homework will be assigned through WeBWork. You can access WebWork through the following link using your UTSA credentials. In case you cannot access, please, <b>let me know immediately</b>.
 </p>
 <p style="text-align:center;">
-  <a class="btn btn-secondary" href="http://webwork.math.utsa.edu/webwork2/MAT_1224_009_Spring_2023/" role="button" style="width:30%;">WebWork</a>
+  <a class="btn btn-secondary" href="https://webwork.math.utsa.edu/webwork2/MAT_1224_009_Spring_2023/" role="button" style="width:30%;">WebWork</a>
 </p>
 <p>
 You will have one week starting at 11.00 am after each lecture to complete each of the assignments. In case you miss this first deadline, you will have an extra week to complete the assignments for 70% of the original credit.
@@ -759,8 +768,24 @@ The midterm exams will take place in the following days (any change will be comm
 In accordance with the <a href="https://asap.utsa.edu/terms.htm">2022 Spring Final Exam Schedule</a>, the final exam of this course will on Wednesday, May 10, from 9.00 am to 10:50 am. The final exam will consist of written problems similar to the homework problems and problems from the midterm exams. More details on the location will be given later.
 </p>
 </div>
+<hr/>
+<div id="tutoring">
+<h2 class="display-4">Tutoring Services</h2>
+<p>
+UTSA offers the possibilities to students to get free tutoring both in person and online.
+</p>
+<h3>UTSA Tutoring Services</h3>
+<p>
+UTSA students can access tutoring by dropping into the <em>Tomás Rivera Center for Academic Excellence</em>, located in MS 2.02.18, or utilizing the chat interface <a href="https://www.utsa.edu/studentsuccess/tutoring/index.html">at their website</a>.  More information about these services and <a href="https://www.utsa.edu/studentsuccess/tutoring/schedule.html">tutoring schedules</a> can be found on <a href="https://www.utsa.edu/studentsuccess/tutoring/">their website</a>.
+</p>
+<h3>TutorMe</h3>
+<p>
+UTSA continues its partnership with TutorMe, a free 24/7 online tutoring platform, to offer additional on-demand tutoring support to students this semester. UTSA students have access to six hours of free tutoring per week through this service. To access this, use <a href="https://utsa.blackboard.com/">the link available in the UTSA Blackboard platform of the course</a>, which can be found in the <em>Start Here</em> and the <em>Tools</em> sections of the course.
+</p>
+</div>
 <br/>
 </div>
+
 
 <footer>
 <hr>
