--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -306,9 +306,19 @@
 <h3>Lecture 0 (Jan 18)<br/>
 <em>The Fundamental Theorem of Calculus</em><a class="btn btn-wiki" href="https://mathresearch.utsa.edu/wiki/index.php?title=The_Fundamental_Theorem_of_Calculus" role="button">UTSA Wiki</a><a class="btn btn-book" href="https://openstax.org/books/calculus-volume-2/pages/1-3-the-fundamental-theorem-of-calculus" role="button">Sec. 1.3</a></h3>
 <p>
-The Fundamental Theorem of Calculus relates the two fundamental notions integrals and derivatives...
+Recall that for a continuous function $f:[a,b]\rightarrow\mathbb{R}$,
+\[\int_a^b\,f(t)\,\mathrm{d}t\]
+is the <em>signed area</em> under $f$ in $[a,b]$. Intuitively, the positive areas comes from those regions where $f$ is positive and the negative ones from those where $f$ is negative, but the rigorous definition of this is done through <em>Riemann sums</em> where we use limits and that this notion is clear for locally constant functions (see <a href="https://openstax.org/books/calculus-volume-2/pages/1-1-approximating-areas">sect. 1.1</a> and <a href="https://openstax.org/books/calculus-volume-2/pages/1-2-the-definite-integral">1.2</a> for the details). The <b>Fundamental Theorem of Calculus</b> asserts that
+\[\int_a^b\,f(t)\,\mathrm{d}t=F(b)-F(a)\]
+where $F$ is an <em>antiderivative</em> of $f$, i.e., $F$ is a continuous function $F:[a,b]\rightarrow \mathbb{R}$ such that for every $x\in (a,b)$, $F'(x)$ exists and satisfies $F'(x)=f(x)$.
 </p>
 <p>
+In another formulation of the <b>Fundamental Theorem of Calculus</b>, we just say the function $F:[a,b]\rightarrow\mathbb{R}$ given by
+\[F(x):=\int_{a}^{x}f(t)\,\mathrm{d}t\]
+is an antiderivative of $f$ on [a,b]$, i.e., a continuous function derivable in $(a,b)$ and such that for all $x\in(a,b)$, $F'(x)=f(x)$. Note that this is equivalent to the above version due to <a href="https://openstax.org/books/calculus-volume-1/pages/4-4-the-mean-value-theorem">the Mean Value Theorem (see Theorem 4.7 in Vol. 1)</a>. However, this version asserts succintly that the antiderivative of a continuous function exists, which is not necessarily clear from the version above.
+</p>
+<p>
+The reason we call this theorem 'fundamental' is because it relates the two fundamental notions of calculus: the derivative—how does the function vary?—and the integral—how does the change accumulate?—. This theorem establishes a direct connection between these two fundamental notions of calculus, allowing us both to compute and study deeper how the functions that we encounter in the world change. A main focus of this course will be in how to use this theorem for computing areas and other physical quantities.
 </p>
 <p>
 <em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Gottfried_Wilhelm_Leibniz">Gottfried Wilhelm Leibniz</a>, the other father of calculus. Additional materials to learn more: <a href="https://www.youtube.com/watch?v=9UKGPOwR-iw&t=97s"><em>Newton and Leibniz: Crash Course History of Science #17</em> by CrashCourse</a>. <a href="https://www.youtube.com/watch?v=68bQ3qSl6jc"><em>Gottfried Wilhem Leibniz</em> by Strayer</a>. <a href="https://www.youtube.com/watch?v=8BwbEMlQOUQ"><em>Philosophy of rationalism—Descartes and Leibniz</em> by Philosophy Animal</a>.
