--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -91,6 +91,7 @@
            <li class="nav-item"><a class="nav-link" href="#homework">Homework</a></li>
            <li class="nav-item"><a class="nav-link" href="#exams">Exams</a></li>
            <li class="nav-item"><a class="nav-link" href="#tutoring">Tutoring Services</a></li>
+           <li class="nav-item"><a class="nav-link" href="#handouts">Other Materials</a></li>
         </ul>
     </nav>
 </div>
@@ -121,7 +122,6 @@
     <a class="btn btn-secondary" href="https://webwork.math.utsa.edu/webwork2/MAT_1224_009_Spring_2023/" role="button" style="width:70%;">WebWork</a>
   </div><div class="col-md-6">
     <a class="btn btn-secondary" href="https://utsa.blackboard.com/" role="button" style="width:70%;">Blackboard</a>
-
   </div></div>
 <hr>
 <div id="basic">
@@ -791,6 +791,16 @@ UTSA students can access tutoring by dropping into the <em>Tomás Rivera Center 
 <p>
 UTSA continues its partnership with TutorMe, a free 24/7 online tutoring platform, to offer additional on-demand tutoring support to students this semester. UTSA students have access to six hours of free tutoring per week through this service. To access this, use <a href="https://utsa.blackboard.com/">the link available in the UTSA Blackboard platform of the course</a>, which can be found in the <em>Start Here</em> and the <em>Tools</em> sections of the course.
 </p>
+</div>
+<hr/>
+<div id="handouts">
+<h2 class="display-4">Extra Materials</h2>
+<p>The following extra materials will be helpful.</p>
+<div class="row" style="text-align:center;"><div class="col-md-6">
+  <a class="btn btn-secondary" href="../pdf/Table_of_Derivatives_and_Antiderivatives.pdf" role="button" style="width:70%;">Table of Derivatives and Antiderivatives</a>
+</div><!--<div class="col-md-6">
+  <a class="btn btn-secondary" href="" role="button" style="width:70%;"></a>
+</div>-->
 </div>
 <br/>
 </div>
