--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -324,6 +324,11 @@ The reason we call this theorem 'fundamental' is because it relates the two fund
 <em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Gottfried_Wilhelm_Leibniz">Gottfried Wilhelm Leibniz</a>, the other father of calculus. Additional materials to learn more: <a href="https://www.youtube.com/watch?v=9UKGPOwR-iw&t=97s"><em>Newton and Leibniz: Crash Course History of Science #17</em> by CrashCourse</a>. <a href="https://www.youtube.com/watch?v=68bQ3qSl6jc"><em>Gottfried Wilhem Leibniz</em> by Strayer</a>. <a href="https://www.youtube.com/watch?v=8BwbEMlQOUQ"><em>Philosophy of rationalism—Descartes and Leibniz</em> by Philosophy Animal</a>.
 </p>
 <p>
+<b>Media to Watch</b>:
+<a href="https://www.youtube.com/watch?v=rfG8ce4nNh0"><em>Integration and the fundamental theorem of calculus</em> by 3Blue1Brown</a>.
+<a href="https://www.youtube.com/watch?v=FnJqaIESC2s"><em>What does area have to do with slope?</em> by 3Blue1Brown</a>.
+</p>
+<p>
 <b>Learning Objectives:</b>
 a) Use the Fundamental Theorem of Calculus to evaluate derivatives of integrals.
 b) Use the Fundamental Theorem of Calculus to evaluate definite integrals.
@@ -804,7 +809,7 @@ UTSA continues its partnership with TutorMe, a free 24/7 online tutoring platfor
 </div>
 <br/>
 </div>
-
+</div>
 
 <footer>
 <hr>
