--- a/UTSA_MAT1224_spring2022.html
+++ b/UTSA_MAT1224_spring2022.html
@@ -86,7 +86,7 @@
 	         <li class="nav-item"><a class="nav-link active" href="#" style="background-color: #F15A22!important;color: #0C2340!important;"><i class="fas fa-less-than-equal "></i></a></li>
 	         <li class="nav-item"><a class="nav-link" href="#basic">Basic Information</a></li>
 					 <li class="nav-item"><a class="nav-link" href="#lectures">Lectures</a></li>
-           <li class="nav-item"><a class="nav-link" href="#bio">Bibliography and more</a></li>
+           <li class="nav-item"><a class="nav-link" href="#biblio">Bibliography and more</a></li>
            <li class="nav-item"><a class="nav-link" href="#grading">Grading</a></li>
            <li class="nav-item"><a class="nav-link" href="#homework">Homework</a></li>
            <li class="nav-item"><a class="nav-link" href="#exams">Exams</a></li>
@@ -662,7 +662,7 @@ The final exam will take place on Wednesday, May 10, from 9.00 to 10.50 am. More
 
 </div>
 <hr>
-<div id="bio">
+<div id="biblio">
 <h2 class="display-4">Bibliography and Supplementary Materials</h2>
 <p>
 	The course will be based mainly in the following textbook:
